objects/geopointe__GP_Calendar_Object__c.object
<CustomObject>
    <description>Configuration settings for determining what Salesforce Objects can be used in the Geopointe Calendar. Events, Store Visits, etc.</description>
    <fields>
        <fullName>geopointe__Create_Form__c</fullName>
        <label>Create Form</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fast Create</fullName>
                    <default>true</default>
                    <label>Fast Create</label>
                </value>
                <value>
                    <fullName>Page Layout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__Default_Field_Values__c</fullName>
        <label>Default Field Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>geopointe__Duration_Field__c</fullName>
        <description>The API field name of the field that represents the Duration of a calendar event.</description>
        <label>Duration Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Duration_Units__c</fullName>
        <description>Specifies the units of the Duration field.</description>
        <label>Duration Units</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Minutes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>geopointe__End_Time_Field__c</fullName>
        <description>The API field name of the End Time field.</description>
        <label>End Time Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Exclude_Calendar_Route_Field__c</fullName>
        <description>The API field name of the Exclude Calendar Route field.</description>
        <label>Subject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Is_All_Day_Field__c</fullName>
        <description>Indicates if a calendar item is for an entire day.</description>
        <label>Is All Day Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Original_Calendar_Item_Id_Field__c</fullName>
        <description>The API field name of the Original Calendar Item</description>
        <label>Subject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__SObject_Name__c</fullName>
        <description>Salesforce Object API name of the object that represents a calendar event. Event, Store_Visit__c, etc.</description>
        <label>SObject Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Start_Time_Field__c</fullName>
        <description>The API field name of the Start Time field.</description>
        <label>Start Time Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__Subject_Field__c</fullName>
        <description>The API field name of the Subject or Name field.</description>
        <label>Subject Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>geopointe__User_Field__c</fullName>
        <description>The API field name of the field which represents user associated to the calendar event. Could be Owner or other User Lookup field.</description>
        <label>User Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geopointe Calendar Object</label>
    <listViews>
        <fullName>geopointe__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geopointe Calendar Object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>